2006-06-09  Lluis Sanchez Gual  <lluis@novell.com>

	* libs/*: Updated from stetic module. Several improvements.
	  Also fixes bug #78160.
	
2006-05-30  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.GuiBuilder/ActionGroupDisplayBinding.cs:
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderDisplayBinding.cs:
	  Added DisplayName property.

2006-05-29  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: reverted interface changes - missing file change
	
2006-05-29  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: reverted interface changes

2006-05-26  Lluis Sanchez Gual  <lluis@novell.com>

	* libs/*: Updated from stetic module. Adds support for toolbars.

2006-05-23  David Makovský (Yakeen) <yakeen@sannyas-on.net> 

	* MonoDevelop.GtkCore.GuiBuilder/CombinedDesignView.cs: track api changes
	
2006-05-19  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.GtkCore.Commands/GladeCommands.cs:
	* MonoDevelop.GtkCore.NodeBuilders/ProjectFolderNodeBuilderExtension.cs:
	* MonoDevelop.GtkCore.addin.xml: Added commands for creating
	  an action group and editing the project icons.
	  
	* MonoDevelop.GtkCore.NodeBuilders/WidgetNodeBuilder.cs: Show local
	  action groups as children of the window node.
	
	* MonoDevelop.GtkCore.NodeBuilders/WindowsFolder.cs:
	* MonoDevelop.GtkCore.NodeBuilders/WindowsFolderNodeBuilder.cs: Moved
	  some event subscriptions to WindowsFolder.cs
	
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderService.cs: 
	* MonoDevelop.GtkCore.NodeBuilders/ActionGroupNodeBuilder.cs: Open the
	  corresponding file when clicking on local action groups.
	  
	* Makefile.am:
	* MonoDevelop.GtkCore.mdp: Added action group template.
	
	* MonoDevelop.GtkCore/WidgetFileDescriptionTemplate.cs: Added support for
	  action group file templates.
	* MonoDevelop.GtkCore.GuiBuilder/GuiBuilderWindow.cs: Notify changes in
	  local action groups.